cslc/test/cc_testing/tests/invalid_signal_group2.csl
//Petronela
csl_signal_group sg1{
  csl_signal s1;
  csl_port p1;//error
  sg1(){
    generate_individual_rtl_signals(on);
  }
};
